# tradegy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
hypotheses/: hyp_gap_against_trend_fade_only_when_high_vol_regime_20260501_221414_18051.yaml  hyp_low_vol_or30_breakout_with_volume_confirmation_i_20260501_221414_18037.yaml  hyp_lunchtime_range_break_fades_because_liquidity_is_20260502_083934_20666.yaml  hyp_mes_mnq_divergence_fade_20260510.yaml  hyp_mes_post_event_first_move_fade_20260510.yaml  hyp_mes_post_high_event_first_move_fade_20260511.yaml  hyp_mes_vix_confirmed_or30_breakout_20260510.yaml  hyp_mes_vix_falling_gap_fade_20260510.yaml  hyp_midday_compression_after_balanced_morning_predic_20260501_221414_18053.yaml  hyp_open_drive_exhaustion_fade_when_first_5m_extends_20260502_083934_20654.yaml  hyp_prior_rth_close_magnet_gap_fills_accelerate_when_20260502_083934_20669.yaml
scripts/: com.tradegy.live-options.plist  com.tradegy.mes-0dte-manage.plist  com.tradegy.mes-0dte.plist  ingest_mes_options_full_grid.py  live_mes_0dte.py  live_mes_0dte_entry.sh  live_mes_0dte_manage.sh  live_options_daily.sh  management_sweep.py  mes_0dte_dashboard.py  mes_0dte_dashboard.sh  multi_source_5k.py  predict_all_sessions.py  run_pairs_backtest.py
strategies/: hyp_low_vol_or30_breakout_with_volume_confirmation_i_20260501_221414_18037__variant_a.yaml  hyp_low_vol_or30_breakout_with_volume_confirmation_i_20260501_221414_18037__variant_b.yaml  hyp_low_vol_or30_breakout_with_volume_confirmation_i_20260501_221414_18037__variant_c.yaml  hyp_low_vol_or30_breakout_with_volume_confirmation_i_20260501_221414_18037__variant_d.yaml  hyp_lunchtime_range_break_fades_because_liquidity_is_20260502_083934_20666__variant_a.yaml  hyp_lunchtime_range_break_fades_because_liquidity_is_20260502_083934_20666__variant_b.yaml  mes_compression_breakout_a.yaml  (+85 more)
(+399 files in other folders)
