[project]
name = "tradegy"
version = "0.1.0"
description = "Tradegy feature pipeline"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.18,<2",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0",
    "typer>=0.15",
    "rich>=13.9",
]

[project.scripts]
tradegy = "tradegy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradegy"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true
