[project]
name = "tradegy"
version = "0.1.0"
description = "Tradegy feature pipeline"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2,<3",
    "polars>=1.18,<2",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0",
    "typer>=0.15",
    "rich>=13.9",
    "ib-async>=2.1.0",
    "exchange-calendars>=4.13.2",
    "anthropic>=0.92",
    "streamlit>=1.40",
    "altair>=5.4",
    "scikit-learn>=1.8.0",
]

[project.scripts]
tradegy = "tradegy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradegy"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-m "not slow"` skips integration tests that load full SPX/SPY
# chains (~30-90s each, ~7min total). Run them with
# `uv run pytest -m slow` (only slow) or
# `uv run pytest -m "slow or not slow"` (everything).
addopts = "-q -m 'not slow'"
markers = [
    "slow: integration tests that load full ingested options chains. Skipped by default for fast iteration; run with `pytest -m slow` or `pytest -m 'slow or not slow'`.",
]

[tool.uv]
package = true
